# suecann

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  db_w40_d3_mar03.npz  db_w40_d3_n1e5.npz  delta_run_stats.csv  expert_states_v5.npz  expert_states_v6.npz  expert_states_w20_d2.npz  expert_states_w40_d3.npz  expert_states_w50_d2.npz  expert_states_w80_d4.npz  ideas.md  main.py  perf_phase0.data  problems.md  pyproject.toml  reference.md  test_dataset.npz  todo.md  training_stats.csv
code/: Cargo.toml  expert_states_v7.npz  pyproject.toml
code/.githooks/: pre-commit
code/checkpoints/: .gitignore
code/checkpoints/2026-05-27-0/: tournament_report.csv  training_stats.csv
code/checkpoints/2026-05-27-0/genomes/: best_genome_final.json  hof_final.json
code/checkpoints/2026-05-27-1/: compiled_rules.txt  evaluate_compiled.py  topology_graph.dot  tournament_report.csv  training_stats.csv
code/checkpoints/2026-05-27-1/genomes/: best_genome_final.json  hof_final.json
code/checkpoints/2026-05-28-1/: tournament_report.csv  training_stats.csv
code/checkpoints/2026-05-28-1/genomes/: best_genome_final.json  hof_final.json  tournament_report.csv
code/checkpoints/2026-05-28-1/rules/: compiled_rules.txt  topology_graph.dot
code/checkpoints/2026-05-28-1/rules_final/: topology_graph.dot
code/checkpoints/2026-05-28-2/: topology_graph.dot  tournament_report.csv  training_stats.csv
code/checkpoints/2026-05-28-2/genomes/: best_genome_final.json  hof_final.json
code/checkpoints/2026-05-28-2/rules/: compiled_rules.txt  topology_graph.dot
code/checkpoints/2026-06-01-1/: best_genome_final.json  compiled_rules_follow.txt  compiled_rules_lead.txt  hof_final.json  topology_graph_follow.dot  topology_graph_lead.dot  tournament_report.csv  training_stats.csv
code/checkpoints/2026-06-02-1/: compiled_rules_follow.txt  compiled_rules_lead.txt  topology_graph_follow.dot  topology_graph_lead.dot  training_stats.csv
code/checkpoints/2026-06-02-1/genomes/: best_genome_final.json  hof_final.json  optimized_weights.json  tournament_report.csv
code/checkpoints/2026-06-03-2/: compiled_rules_follow.txt  compiled_rules_lead.txt  topology_graph_follow.dot  topology_graph_lead.dot  tournament_report.csv  training_stats.csv
code/checkpoints/2026-06-03-2/genomes/: best_genome_final.json  optimized_weights.json  tournament_report.csv
code/checkpoints/diag/2026-06-14-1/: training_stats.csv
code/configs/: ab_asym_identity.toml  default.toml  probe_asym_identity.toml  probe_asym_threshold.toml  probe_sym_threshold.toml  profile_phase0.toml  smoke_stageb.toml  stageb.toml  test.toml
code/frontend/: package.json
code/frontend/src/: App.tsx  babel.config.js  index.css
code/frontend/src/components/: Card.tsx  (+1 more)
code/scripts/: analyze_dataset.py  dataset_analysis.py  make_report_figures.py  measure_ceilings.py  measure_probeA.py  plot_training.py
code/src/sueca_solver/: Cargo.toml
code/src/sueca_wasm/: Cargo.toml
src/sueca_solver/: Cargo.toml
src/sueca_solver/src/: belief.rs  constants.rs  engine.rs  evaluator.rs  heuristic.rs  lib.rs  pimc.rs  search.rs  simulator.rs  wann.rs
src/sueca_wann/: Cargo.toml
src/sueca_wann/src/: benchmark.rs  checkpoint.rs  compile_rules.rs  config.rs  constants.rs  dataset.rs  dataset_gen.rs  evaluator.rs  genome.rs  hall_of_fame.rs  lib.rs  main.rs  map_elites.rs  mutations.rs  population.rs  runtime_data.rs  species.rs  train.rs  wann_network.rs
(+144 files in other folders)
