[project]
name = "sueca-wann"
version = "0.1.0"
description = "Sueca WANN with optimized Rust solver"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "maturin>=1.5,<2.0",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "src/sueca_solver/Cargo.toml"
module-name = "sueca_solver"
features = ["pyo3/extension-module"]
