[package]
name = "sueca_solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "sueca_solver"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
npyz = "0.8"

[dev-dependencies]
proptest = "1.4"
