[package]
name = "sueca_wann"
version = "0.1.0"
edition = "2021"

[dependencies]
sueca_solver = { path = "../sueca_solver", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
rand = "0.8"
rand_pcg = "0.3"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
zip = "0.6"
npyz = "0.8"
rayon = "1.8"
