[package]
name = "sueca_wann"
version = "0.1.0"
edition = "2021"

[lib]
name = "sueca_wann"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "sueca_wann"
path = "src/main.rs"
required-features = ["training"]

[features]
default = ["training"]
training = [
    "dep:bincode",
    "dep:csv",
    "dep:clap",
    "dep:zip",
    "dep:npyz",
    "dep:rayon",
    "dep:chrono",
    "dep:toml",
    "dep:rand_pcg"
]

[dependencies]
sueca_solver = { path = "../sueca_solver", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Optional dependencies for training feature
bincode = { version = "1.3", optional = true }
toml = { version = "0.8", optional = true }
rand_pcg = { version = "0.3", optional = true }
csv = { version = "1.3", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
zip = { version = "0.6", optional = true }
npyz = { version = "0.8", optional = true }
rayon = { version = "1.8", optional = true }
chrono = { version = "0.4", optional = true }
