[package]
name = "sueca_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_pcg = "0.3"
sueca_solver = { path = "../sueca_solver" }
sueca_wann = { path = "../sueca_wann", default-features = false }
